tests/miniJava/neg/000175_mutation.MiniJava
class java { public static length void Main ( String [ ] java ) { { } } }
